🐛 fix: movies being aligned in center

--- a/front/src/pages/Search.css
+++ b/front/src/pages/Search.css
@@ -1,56 +1,54 @@
 /* No seu arquivo de estilos */
 .custom-input-style {
-    background-color: #1A202C;
-    border-radius: 15px;
-    font-family: Inter;
-    font-size: 26px;
-    font-style: italic;
-    font-weight: 500;
-    line-height: normal;
-    color: rgba(255, 255, 255, 0.50);
-    border: none;
-    max-width: 60%;
-    width: 55rem;
-    height: 4rem;
-  }
-  
-  .image-container {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    align-items: self-end;    
-    justify-content: center;
-    gap: 2rem; 
-    margin: 2.5rem;
-    overflow-y: scroll;
-  }
-  
-  .image-item {
-    border-radius: 12px;
-    margin-bottom: 2rem;
-  }
+  background-color: #1a202c;
+  border-radius: 15px;
+  font-family: Inter;
+  font-size: 26px;
+  font-style: italic;
+  font-weight: 500;
+  line-height: normal;
+  color: rgba(255, 255, 255, 0.5);
+  border: none;
+  max-width: 60%;
+  width: 55rem;
+  height: 4rem;
+}
 
-  .image-item > img{
-    border-radius: 15px;
-    width: 200px;
-    height: 290px;
-  }
+.image-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: self-end;
+  justify-content: start;
+  gap: 2rem;
+  margin: 2.5rem;
+  overflow-y: scroll;
+}
 
+.image-item {
+  border-radius: 12px;
+  margin-bottom: 2rem;
+}
+
+.image-item > img {
+  border-radius: 15px;
+  width: 200px;
+  height: 290px;
+}
 
 ::-webkit-scrollbar {
-  width: 8px; 
+  width: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #b8b7b7; 
+  background-color: #b8b7b7;
   border-radius: 5px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #1A202C;
+  background-color: #1a202c;
 }
 
 ::-webkit-scrollbar-vertical {
   width: 10px;
 }
-
